--- a/src/sass/layout/_l-archive-home.scss
+++ b/src/sass/layout/_l-archive-home.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-.l-topcontact {
+.l-archive-home {
     margin-top: rem(40);
     @include mq("md") {
-        margin-top: rem(110);
+        margin-top: rem(60);
     }
 }
