--- a/src/sass/object/component/_c-section-header.scss
+++ b/src/sass/object/component/_c-section-header.scss
@@ -27,3 +27,12 @@
     }
 }
 
+.c-section-header--left {
+    @include mq("md") {
+        text-align: left;
+    }
+}
+
+.c-section-header--white {
+    color: $white;
+}
