--- a/src/sass/object/project/_p-footer.scss
+++ b/src/sass/object/project/_p-footer.scss
@@ -4,6 +4,10 @@
     background-color: $bg-black;
     padding-top: rem(50);
     padding-bottom: rem(20);
+    @include mq("md") {
+        padding: rem(60) 0;
+
+    }
 }
 
 .p-footer__inner {
