--- a/src/sass/object/project/_p-news.scss
+++ b/src/sass/object/project/_p-news.scss
@@ -1,10 +1,28 @@
 @use "global" as *;
 
+.p-news__inner {
+    @include mq("md") {
+        display: flex;
+        justify-content: center;
+    }
+}
+
 .p-news__items {
     margin-top: rem(32);
+    @include mq("md") {
+        margin: 0;
+    }
 }
 
 .p-news__item + .p-news__item {
     margin-top: rem(40);
+    @include mq("md") {
+        margin-top: rem(15);
+    }
 }
 
+.p-news__item {
+    @include mq("md") {
+        margin-left: rem(50);
+    }
+}
