--- a/src/sass/layout/_l-sub-contact.scss
+++ b/src/sass/layout/_l-sub-contact.scss
@@ -1,8 +1,9 @@
 @use "global" as *;
 
-.l-topcontact {
-    margin-top: rem(40);
+.l-sub-contact {
+    margin-top: rem(80);
     @include mq("md") {
         margin-top: rem(110);
     }
+
 }
