--- a/src/sass/object/project/_p-footer-nav.scss
+++ b/src/sass/object/project/_p-footer-nav.scss
@@ -1,14 +1,12 @@
 @use "global" as *;
 
-
-.p-footer-nav {
-
-}
-
 .p-footer-nav__items {
     display: flex;
     flex-wrap: wrap;
     row-gap: rem(20);
+    @include mq("md") {
+        justify-content: center;
+    }
 }
 
 .p-footer-nav__item a {
