--- a/src/sass/object/project/_p-header.scss
+++ b/src/sass/object/project/_p-header.scss
@@ -1,13 +1,18 @@
 @use "global" as *;
 
 .p-header {
-    height: rem(62);
+    height: rem(64);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: transparent;
     z-index: 1000;
+    transition: background-color 0.3s;
+}
+
+.p-header.change-color {
+    background-color: $blue;
 }
 
 .p-header__inner {
@@ -23,6 +28,9 @@
     font-size: rem(18);
     line-height: 1;
     display: block;
+    @include mq("md") {
+        font-size: rem(24);
+    }
 }
 
 .p-header__pc-nav {
