--- a/src/sass/object/project/_p-service.scss
+++ b/src/sass/object/project/_p-service.scss
@@ -3,11 +3,19 @@
 
 .p-service__items {
     margin-top: rem(32);
+    @include mq("md") {
+        margin-top: rem(30);
+        display: flex;
+    }
 }
 
 
 .p-service__item + .p-service__item {
     margin-top: rem(40);
+    @include mq("md") {
+        margin-top: 0;
+        margin-left: rem(30);
+    }
 }
 
 .p-service__button {
